<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_BusCYD6F_Input" Id="{3fdb772f-02fe-4771-9698-52e178324fad}">
    <Declaration><![CDATA[TYPE ST_BusCYD6F_Input :
STRUCT
	diID			:DINT;							(* Device ID ( Steht auf dem Aufkleber und wird zur Identifizierung im BUS benötigt)*)
	sName			:STRING;						(* Name des Tasters (zb- Wohnzimmer1 *)
	iLED      		:ARRAY[1..6] OF INT;     	  	(* gewünschter LED-Zustand (TRUE = 100 %)*)
	iLEDExt   	 	:ARRAY[1..6] OF INT;     	  	(* gewünschter LED-Zustand (TRUE = 100 %)*)
	iLEDBg			:INT;							(* gewünschte Hintergrundbeleuchtung *)
	
	
	bReset			:BOOL;							(* Reset des Tasters (Hardware) *)
	bExecute		:BOOL;							(* Aktivierung des Tasters *)
	bExtOutLED		:BOOL;							(* Verwendet die  Extra Ausgänge für LEDs / Mehr Busaulastung!  *)
	
	bServiceMode	:BOOL;
	bService		:BOOL;
	bWifi			:BOOL;
	bWebServer		:BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>