<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_BusRelais16F_Input" Id="{a4e8ab48-32cf-4cd6-ad73-46e9f1a59ed1}">
    <Declaration><![CDATA[TYPE ST_BusRelais16F_Input :
STRUCT
	diID		:DINT;							(* Device ID ( Steht auf dem Aufkleber und wird zur Identifizierung im BUS benötigt)*)
	sName		:STRING;						(* Name des Tasters (zb- Wohnzimmer1 *)
	bOut     	:ARRAY[1..16] OF BOOL;     	  	(* gewünschter Zustand (TRUE = An%)*)
	bReset		:BOOL;							(* Reset des Tasters (Hardware) *)
	bExecute	:BOOL;							(* Aktivierung des Tasters *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>