<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_HausBus_Ident" Id="{eb991498-915f-4955-ad6c-6a3ab1de151a}">
    <Declaration><![CDATA[TYPE ST_HausBus_Ident :
STRUCT
	diID			:DINT;							(* Device ID ( Steht auf dem Aufkleber und wird zur Identifizierung im BUS benötigt)*)
	sName			:STRING;						(* Name des Tasters (zb- Wohnzimmer1 *)	
	sPingIdent		:STRING :='TMP.1.gSTATUS'; 		(* Ping Identifiaktions String, wird bim Pingen gesendet  (Bei Taster = TMP.1.gSTATUS / Relais = OUT.210.rSTATUS / CYD= noch nicht definiert*)
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>