<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{62b3adeb-04f3-4511-b209-66be2b50124c}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
VAR_GLOBAL

    KL6041In    					AT %I* : KL6inData22B; // Eingangsdaten von der Klemme
    KL6041Out 						AT %Q* : KL6outData22B; // Ausgangsdaten zur Klemme
	
	uiEtherCATStateBK1120_RS485COM	AT %I* : UINT;			// EtherCAT Status 
	uiKBusStateBK1120_RS485COM		AT %I* : UINT;			// Buskoppler Status
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>