<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_HausBus_CONSTANT" Id="{f5dce3cc-5d7e-4a67-9d32-0cdc1bf720a1}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
VAR_GLOBAL CONSTANT
	cMaxBusTaster			:INT :=10;
	cMaxCYD					:INT :=2;
	cMaxBusRelais			:INT :=1;
	cMaxRS485CMDFiFo		:INT := 15;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>