<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_HausBus_Parameter" Id="{b58a1c85-e114-4680-8eee-9ccfbf20d578}">
    <Declaration><![CDATA[{attribute 'Tc2GvlVarNames'}
VAR_GLOBAL
	
	(* Ping *)
	bUseTasterPing						:BOOL := TRUE;			(* Schaltet den Dauerping für die Taster ein *)	(* Wird noch nicht verwendet, da es nicht so zuverlässig Funktioniert *)
	bUseRelaisPing						:BOOL := TRUE;			(* Schaltet den Dauerping für die Relais ein *)	(* Wird noch nicht verwendet, da es nicht so zuverlässig Funktioniert *)
	bUseCYDPing							:BOOL := FALSE;	
	bUseFiFoPing						:BOOL := TRUE; 
	
	cTimePingTimeCYD					:TIME := T#25S;			(* Ping Intervallzeit *)
	cTimeReceiveTimeoutCYD				:TIME := T#200MS;		(* Ping Empfangs Timeout *)
	
	cTimePingTimeRelais					:TIME := T#15S;			(* Ping Intervallzeit *)
	cTimeReceiveTimeoutRelais			:TIME := T#200MS;		(* Ping Empfangs Timeout *)
	
	cTimePingTimeTaster					:TIME := T#15S;			(* Ping Intervallzeit *)	(* Vorerst auf 5min gestellt, da die Taster Automatisch senden (Helligkeit/Luftfeuchtigkeit/Temp usw. *)
	cTimeReceiveTimeoutTaster			:TIME := T#200MS;		(* Ping Empfangs Timeout *)
	
	cPingSendTimeFiFo					:TIME := T#5S;			(* Intervall Zeit, wann ein Ping vom FiFo gesendet werden soll an alle Devices *)
	
	cMaxPingTry							:INT :=	5;				(* Anzahl der Pingversuche *)
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>