<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="RS485_COM_PRG" Id="{6dd6665a-a6d4-412f-b9c4-7cb94f6da62e}" SpecialFunc="None">
    <Declaration><![CDATA[(*======================================================================================================================================*)
(*RS485_COM_PRG: Beispielhaftes Programm zum Steuern von HAus-Bus.de Komponenten über RS485 mit TwinCAT
					Achtung dieser POU muss als 1ms Task Aufgerufen werden um Ordnungsgemäß zu laufen *)
(*
Date          	| Version    	| created under        	| Author          	| Remark *)
(*====================================================================================================================================================*)
(*15/05/2025   	| 1.00      		| TC3		  		| N.Kersting       | first release *)
(*====================================================================================================================================================*)

PROGRAM RS485_COM_PRG
VAR  
     i,h,j						:INT;
	
	fbRS485Startup				:fb_RS485Startup;		(* Startup Parametrierung der Klemme/ RS485 Bus *)
	fbRS485SendCmdFiFo			:fb_RS485FiFoMaster;	(* Sende und Empfangs FiFo für RS485 *)
	fbLineControl 				:SerialLineControl;		(* Hält die Serielle Kommunikation Aufrecht *)
	
	fComBufferReset				:ClearComBuffer;		(* Löschen des SPS Internen Bufferinhalts *)
	
	rxBuffer 					:ComBuffer;				(* COM Buffer Empfangen *)
    txBuffer 					:ComBuffer;				(* COM Buffer Senden *)
	
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* IDs Setzen *)
ac00_HausBusIdRS485COM();
(* RS485 Klemmen Config *)
ac01_StartupRS485COM();

]]></ST>
    </Implementation>
    <Folder Name="Aufrufe" Id="{6e56fed8-3c26-47a0-8e19-67d3f91b47b1}" />
    <Action Name="ac00_HausBusIdRS485COM" Id="{5732253f-e0f1-4a17-91db-75baa6756837}">
      <Implementation>
        <ST><![CDATA[(* Initialisierung der Gerätenamen *)
(* Achtung nur Beispiele *)
stHBDeviceIdent[1].sName	:=			'Wohnzimmer';
stHBDeviceIdent[1].diID	:=				5256;
stHBDeviceIdent[1].sPingIdent :=		'TMP.1.gSTATUS';

stHBDeviceIdent[2].sName	:=			'Test1';
stHBDeviceIdent[2].diID	:=				5269;
stHBDeviceIdent[2].sPingIdent :=		'TMP.1.gSTATUS';

stHBDeviceIdent[3].sName	:=			'Test2';
stHBDeviceIdent[3].diID	:=				1234;
stHBDeviceIdent[3].sPingIdent :=		'TMP.1.gSTATUS';

stHBDeviceIdent[4].sName	:=			'Test3';
stHBDeviceIdent[4].diID	:=				3333;
stHBDeviceIdent[4].sPingIdent :=		'TMP.1.gSTATUS';

stHBDeviceIdent[5].sName	:=			'Test4';
stHBDeviceIdent[5].diID	:=				4444;
stHBDeviceIdent[5].sPingIdent :=		'TMP.1.gSTATUS';

stHBDeviceIdent[6].sName	:=			'';
stHBDeviceIdent[6].diID	:=				0;
stHBDeviceIdent[6].sPingIdent :=		'TMP.1.gSTATUS';

stHBDeviceIdent[7].sName	:=			'';
stHBDeviceIdent[7].diID	:=				0;
stHBDeviceIdent[7].sPingIdent :=		'TMP.1.gSTATUS';

stHBDeviceIdent[8].sName	:=			'';
stHBDeviceIdent[8].diID	:=				0;
stHBDeviceIdent[8].sPingIdent :=		'TMP.1.gSTATUS';

stHBDeviceIdent[9].sName	:=			'';
stHBDeviceIdent[9].diID	:=				0;
stHBDeviceIdent[9].sPingIdent :=		'TMP.1.gSTATUS';

stHBDeviceIdent[10].sName	:=			'';
stHBDeviceIdent[10].diID	:=			0;
stHBDeviceIdent[10].sPingIdent :=		'TMP.1.gSTATUS';

stHBDeviceIdent[11].sName	:=			'Jalousie 1';
stHBDeviceIdent[11].diID	:=			5614;
stHBDeviceIdent[11].sPingIdent :=		'OUT.210.gSTATUS';

stHBDeviceIdent[12].sName	:=			'';
stHBDeviceIdent[12].diID	:=			0;
stHBDeviceIdent[12].sPingIdent :=		'OUT.210.gSTATUS';

stHBDeviceIdent[13].sName	:=			'CYD Test';
stHBDeviceIdent[13].diID	:=			5999;
stHBDeviceIdent[13].sPingIdent :=		'OUT.210.gSTATUS';
]]></ST>
      </Implementation>
    </Action>
    <Action Name="ac01_StartupRS485COM" Id="{354e2a31-8e9f-4c62-8bef-dabbbf0da490}">
      <Implementation>
        <ST><![CDATA[
(* Klemmen Startup, inkl Klemmenkonfiguration usw. *)
fbRS485Startup(
	I_bExecute:= 		TRUE, 
	I_bBusOK:= 			uiEtherCATStateBK1120_RS485COM = 8
						AND uiKBusStateBK1120_RS485COM = 0, 
	I_tStartupVerz:= 	T#5S, 
	IQ_InData:= 		KL6041In, 
	IQ_OutData:= 		KL6041Out, 
	Q_sState=> , 
	Q_bStartupDone=> , 
	Q_bError=> );

(* Aktivierung der Linecontrole erst wenn Startup erfolgt *)	
IF fbRS485Startup.Q_bStartupDone
THEN
	fbLineControl(
		Mode := 		ComSerialLineMode_t.SERIALLINEMODE_KL6_22B_STANDARD,
		pComIn := 		ADR(KL6041In),
		pComOut := 		ADR(KL6041Out),
		SizeComIn := 	UINT_TO_INT(SIZEOF(KL6041In)),
		RxBuffer := 	rxBuffer,
		TxBuffer := 	txBuffer );
				
	(* Relais *)
	ac10_HausBusRelaisRS485COM();
	(* Taster *)
	ac10_HausBusTasterRS485COM();
	(* CYD *)
	ac10_HausBusCYDRS485COM();
	
	
	(* Senden FiFo *)			
	fbRS485SendCmdFiFo(
		I_sSendCmdFiFo:= 		GVL_RS485FiFoSend.sSendFiFo, 
		I_stDeviceIdent :=		stHBDeviceIdent,
		I_bAutoPing:= 			bUseFiFoPing, 
		I_tAutoPingTime:= 		cPingSendTimeFiFo,		 
		I_bManuellMode:= 		, 
		I_sSendCmdManuell:= 	, 
		I_bSendManuell:= 		, 
		I_bExecute:= 			TRUE, 
		I_bBusBelastungstest:= 	, 
		I_bReset:= 				, 
		I_sStartZeichen:= 		, 
		I_sEndZeichen:= 		, 
		I_pTxBuffer:= 			ADR(txBuffer), 
		I_pRxBuffer:= 			ADR(rxBuffer), 
		Q_sReceiveString=> , 
		Q_lrBusAuslastung=> , 
		Q_bBusy=> , 
		Q_bDone=> , 
		Q_bError=> , 
		Q_sState=> , 
		Q_stStates=> );
		
ELSE
	(* Com Buffer zum Resetten *)
	fComBufferReset(Buffer:= rxBuffer);
	fComBufferReset(Buffer:= txBuffer);
END_IF
	]]></ST>
      </Implementation>
    </Action>
    <Action Name="ac10_HausBusCYDRS485COM" Id="{1feac4c3-8270-47f7-bbe2-dba512bcd624}" FolderPath="Aufrufe\">
      <Implementation>
        <ST><![CDATA[(* Bustaster Aufrufe *)
FOR j := cMaxBusRelais+cMaxBusTaster+2 TO cMaxBusRelais+cMaxBusTaster+cMaxCYD+1 BY 1 DO
		
	fbCYDHB6F[j].I_stInput.sName :=	stHBDeviceIdent[j].sName;
	fbCYDHB6F[j].I_stInput.diID	:=	stHBDeviceIdent[j].diID;
	
	IF GVL_ServiceVisu.bCYDServiceAktiv[j]
	THEN
		fbCYDHB6F[j].I_stInput.iLED := GVL_ServiceVisu.stCYDService[j].iLED;
		fbCYDHB6F[j].I_stInput.iLEDBg := GVL_ServiceVisu.stCYDService[j].iLEDBg;
		fbCYDHB6F[j].I_stInput.iLEDExt := GVL_ServiceVisu.stCYDService[j].iLEDExt;
		fbCYDHB6F[j].I_stInput.bReset := GVL_ServiceVisu.stCYDService[j].bReset;
		fbCYDHB6F[j].I_stInput.bServiceMode := GVL_ServiceVisu.stCYDService[j].bServiceMode;
		fbCYDHB6F[j].I_stInput.bService := GVL_ServiceVisu.stCYDService[j].bService;
		fbCYDHB6F[j].I_stInput.bWifi := GVL_ServiceVisu.stCYDService[j].bWifi;
		fbCYDHB6F[j].I_stInput.bWebServer := GVL_ServiceVisu.stCYDService[j].bWebServer;
		
	END_IF
	
	stCYDService[j].sName :=	fbCYDHB6F[j].I_stInput.sName;
	stCYDService[j].diID :=		fbCYDHB6F[j].I_stInput.diID;
	
	fbCYDHB6F[j].I_stInput.bExecute := TRUE;
	fbCYDHB6F[j](
		I_FifoID :=			j,
		I_bPingStart:= 		TRUE , 	(* Taster Verzögert Pingen, damit weniger Busauslastung entsteht *)
		I_StringReceived:=	fbRS485SendCmdFiFo.Q_sReceiveString);
		
	(* Sendebefehle an FiFo Übergeben *)
	GVL_RS485FiFoSend.sSendFiFo[j] :=	fbCYDHB6F[j].Q_sFiFoSend;
END_FOR]]></ST>
      </Implementation>
    </Action>
    <Action Name="ac10_HausBusRelaisRS485COM" Id="{c08d890d-e2db-478d-a692-045466c2ee35}" FolderPath="Aufrufe\">
      <Implementation>
        <ST><![CDATA[(* BusRelais Aufrufe *)
FOR h := cMaxBusTaster +1 TO cMaxBusRelais+cMaxBusTaster+1 BY 1 DO (*cMaxBusTaster+1..cMaxBusRelais+cMaxBusTaster+1*)
		
	fbRelaisHB16F[h].I_stInput.sName :=	stHBDeviceIdent[h].sName;
	fbRelaisHB16F[h].I_stInput.diID	:=	stHBDeviceIdent[h].diID;
	
	IF GVL_ServiceVisu.bRelaisServiceAktiv[h]
	THEN
		fbRelaisHB16F[h].I_stInput.bOut := stRelaisService[h].bOut;
		fbRelaisHB16F[h].I_stInput.bReset := stRelaisService[h].bReset;
	END_IF
	
	stRelaisService[h].sName :=	fbRelaisHB16F[h].I_stInput.sName;
	stRelaisService[h].diID :=	fbRelaisHB16F[h].I_stInput.diID;
	
	fbRelaisHB16F[h].I_stInput.bExecute := TRUE;
	fbRelaisHB16F[h](
		I_FifoID :=			h,
		I_bPingStart:= 		TRUE,	(* Direkt Starten *)
		I_StringReceived:=	fbRS485SendCmdFiFo.Q_sReceiveString);
		
	(* Sendebefehle an FiFo Übergeben *)
	GVL_RS485FiFoSend.sSendFiFo[h] :=	fbRelaisHB16F[h].Q_sFiFoSend;	
END_FOR]]></ST>
      </Implementation>
    </Action>
    <Action Name="ac10_HausBusTasterRS485COM" Id="{f4fb0d91-a1c4-466e-8327-78f0013f7848}" FolderPath="Aufrufe\">
      <Implementation>
        <ST><![CDATA[(* Bustaster Aufrufe *)
FOR i := 1 TO cMaxBusTaster BY 1 DO
			
	fbTasterHB6F[i].I_stInput.sName :=	stHBDeviceIdent[i].sName;
	fbTasterHB6F[i].I_stInput.diID	:=	stHBDeviceIdent[i].diID;
	
	IF GVL_ServiceVisu.bTasterServiceAktiv[i]
	THEN
		fbTasterHB6F[i].I_stInput.iLED := GVL_ServiceVisu.stTasterService[i].iLED;
		fbTasterHB6F[i].I_stInput.iLEDBg := GVL_ServiceVisu.stTasterService[i].iLEDBg;
		fbTasterHB6F[i].I_stInput.iLEDExt := GVL_ServiceVisu.stTasterService[i].iLEDExt;
		fbTasterHB6F[i].I_stInput.bReset := GVL_ServiceVisu.stTasterService[i].bReset;
	END_IF
	
	stTasterService[i].sName :=	fbTasterHB6F[i].I_stInput.sName;
	stTasterService[i].diID :=	fbTasterHB6F[i].I_stInput.diID;
	
	fbTasterHB6F[i].I_stInput.bExecute := TRUE;
	fbTasterHB6F[i](
		I_FifoID :=			i,
		I_bPingStart:= 		TRUE , 	(* Taster Verzögert Pingen, damit weniger Busauslastung entsteht *)
		I_StringReceived:=	fbRS485SendCmdFiFo.Q_sReceiveString);
		
	(* Sendebefehle an FiFo Übergeben *)
	GVL_RS485FiFoSend.sSendFiFo[i] :=	fbTasterHB6F[i].Q_sFiFoSend;
END_FOR]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="RS485_COM_PRG">
      <LineId Id="743" Count="0" />
      <LineId Id="740" Count="0" />
      <LineId Id="742" Count="0" />
      <LineId Id="243" Count="0" />
      <LineId Id="769" Count="0" />
      <LineId Id="741" Count="0" />
    </LineIds>
    <LineIds Name="RS485_COM_PRG.ac00_HausBusIdRS485COM">
      <LineId Id="64" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="76" Count="2" />
      <LineId Id="75" Count="0" />
      <LineId Id="80" Count="2" />
      <LineId Id="79" Count="0" />
      <LineId Id="84" Count="2" />
      <LineId Id="83" Count="0" />
      <LineId Id="88" Count="2" />
      <LineId Id="87" Count="0" />
      <LineId Id="92" Count="2" />
      <LineId Id="91" Count="0" />
      <LineId Id="96" Count="2" />
      <LineId Id="95" Count="0" />
      <LineId Id="100" Count="2" />
      <LineId Id="99" Count="0" />
      <LineId Id="104" Count="2" />
      <LineId Id="103" Count="0" />
      <LineId Id="108" Count="2" />
      <LineId Id="107" Count="0" />
      <LineId Id="112" Count="2" />
      <LineId Id="111" Count="0" />
      <LineId Id="116" Count="2" />
      <LineId Id="115" Count="0" />
      <LineId Id="120" Count="2" />
      <LineId Id="119" Count="0" />
      <LineId Id="123" Count="0" />
    </LineIds>
    <LineIds Name="RS485_COM_PRG.ac01_StartupRS485COM">
      <LineId Id="414" Count="0" />
      <LineId Id="406" Count="0" />
      <LineId Id="396" Count="8" />
      <LineId Id="359" Count="0" />
      <LineId Id="415" Count="0" />
      <LineId Id="407" Count="0" />
      <LineId Id="405" Count="0" />
      <LineId Id="408" Count="0" />
      <LineId Id="360" Count="7" />
      <LineId Id="379" Count="3" />
      <LineId Id="420" Count="1" />
      <LineId Id="446" Count="1" />
      <LineId Id="424" Count="0" />
      <LineId Id="450" Count="13" />
      <LineId Id="471" Count="0" />
      <LineId Id="465" Count="5" />
      <LineId Id="449" Count="0" />
      <LineId Id="472" Count="0" />
      <LineId Id="410" Count="0" />
      <LineId Id="419" Count="0" />
      <LineId Id="411" Count="0" />
      <LineId Id="413" Count="0" />
      <LineId Id="412" Count="0" />
      <LineId Id="266" Count="0" />
    </LineIds>
    <LineIds Name="RS485_COM_PRG.ac10_HausBusCYDRS485COM">
      <LineId Id="22" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="34" Count="2" />
      <LineId Id="4" Count="5" />
      <LineId Id="27" Count="4" />
      <LineId Id="10" Count="6" />
      <LineId Id="23" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="RS485_COM_PRG.ac10_HausBusRelaisRS485COM">
      <LineId Id="48" Count="0" />
      <LineId Id="19" Count="1" />
      <LineId Id="49" Count="2" />
      <LineId Id="21" Count="10" />
      <LineId Id="45" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="46" Count="1" />
      <LineId Id="35" Count="0" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="RS485_COM_PRG.ac10_HausBusTasterRS485COM">
      <LineId Id="22" Count="0" />
      <LineId Id="2" Count="1" />
      <LineId Id="28" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="4" Count="12" />
      <LineId Id="23" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>